[package]
name = "conv2"
version = "0.4.0-alpha.1"
authors = ["Daniel Keep <daniel.keep@gmail.com>", "Eric Seppanen <eds@reric.net>"]
description = "This crate provides a number of conversion traits with more specific semantics than those provided by 'as' or 'From'/'Into'."
repository = "https://github.com/ericseppanen/conv2"
readme = "README.md"
license = "MIT"
keywords = ["from", "into", "conversion", "approximation"]
edition = "2021"
rust-version = "1.56"

exclude = [
    "scripts/*",
]

[features]
default = ["std"]
std = ["custom_derive/std"]

[dependencies]
custom_derive = { version = "0.1.5", default-features = false }

[dev-dependencies]
quickcheck = "0.2.21, < 0.2.25"
