[package]
name = "conv2"
version = "0.4.2"
authors = ["Daniel Keep <daniel.keep@gmail.com>", "Eric Seppanen <eds@reric.net>"]
description = "This crate provides a number of conversion traits with more specific semantics than those provided by 'as' or 'From'/'Into'."
repository = "https://github.com/ericseppanen/conv2"
readme = "README.md"
license = "MIT"
keywords = ["from", "into", "conversion", "approximation"]
edition = "2021"
rust-version = "1.61"
exclude = [".github"]

[dependencies]
thiserror = "1.0.64"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
